Fix book wrap and email duplication

--- a/style/book_management.css
+++ b/style/book_management.css
@@ -7,6 +7,7 @@ h1 {
 .books {
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
 }
 
 .book {
