--- a/style/collection.css
+++ b/style/collection.css
@@ -11,6 +11,7 @@ h2 {
 .books {
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
 }
 
 .book-selectable {
@@ -30,6 +31,7 @@ h2 {
 .books {
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
 }
 
 .book {
