--- a/style/order.css
+++ b/style/order.css
@@ -3,6 +3,7 @@
 .books {
     display: flex;
     flex-flow: row;
+    flex-wrap: wrap;
 }
 
 .book {
